--- a/test-workflow.yml
+++ b/test-workflow.yml
@@ -1,1 +1,38 @@
-mkdir -p .github/workflows
+name: Testar o Código
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Fazer checkout do código
+        uses: actions/checkout@v2
+
+      - name: Configurar Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+
+      - name: Instalar dependências
+        run: |
+          pip install -r requirements.txt
+
+      - name: Rodar os testes
+        run: |
+          pytest
+
+      - name: Verificar se os testes passaram
+        if: success()
+        run: echo "Todos os testes passaram!"
+        
+      - name: Notificar erro nos testes
+        if: failure()
+        run: echo "Alguns testes falharam!"
